@@ -3,6 +3,7 @@
 	* Removed hook definition for TCEMain's processCmdMap because it was not used
 	* Fixed bug #2417: mnoGoSearch + TemplaVoila cause wrong RealURL paths
 	* Updated dependency for pagepath extension to 0.1.3
+	* Updated code for displaying result time and clones
 
 2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>
 
